change file name to English

--- a/src/main/webapp/createpayment.html
+++ b/src/main/webapp/createpayment.html
@@ -221,14 +221,14 @@
 								<div class="cart-items fn-clear  " data-id="100014801">
 									<div class="prod-info">
 										<div class="items-thumb">
-											<a href="http://www.smartisan.com/#/item/100014801"
+											<a href="./milk.html"
 												title="奇雅光明牛奶" target="_blank"> <img
-												src="./img/library/光明牛奶.jpg">
+												src="./img/library/milk.jpg">
 											</a>
 										</div>
 										<div class="items-params fn-clear">
 											<h6 class="name">
-												<a href="#"
+												<a href="./milk.html"
 													title="奇雅光明牛奶" target="_blank">奇雅光明牛奶</a>
 											</h6>
 											<div class="subtotal">¥ 69.00</div>
