--- a/src/main/webapp/milk.html
+++ b/src/main/webapp/milk.html
@@ -171,7 +171,7 @@ ng\:form {
 											data-id="100013618" data-mobile=""><div class="thumb">
 												<img
 													ng-src="http://img01.smartisanos.cn/16/1000136/100013618/76B99D22ECB4EA7CD95D90B4617C8B92/80X80.jpg"
-													src="./img/library/奇雅月饼.jpg">
+													src="./img/library/mooncake.jpg">
 											</div>
 											<div class="desc">
 												<p class="cart-name hide-row">
@@ -200,12 +200,12 @@ ng\:form {
 											data-id="100014801" data-mobile=""><div class="thumb">
 												<img
 													ng-src="http://img01.smartisanos.cn/67/100014801/29C1ECDFE71657216687986EDB2F0BC3/1450756133/80X80.jpg"
-													src="./img/library/光明牛奶.jpg">
+													src="./img/library/milk.jpg">
 											</div>
 											<div class="desc">
 												<p class="cart-name hide-row">
 													<!-- ngIf: cart.link -->
-													<a href="#"
+													<a href="./milk.html"
 														ng-if="cart.link" class="ng-binding ng-scope">奇雅光明牛奶</a>
 													<!-- end ngIf: cart.link -->
 													<!-- ngIf: !cart.link -->
@@ -264,11 +264,11 @@ ng\:form {
 									<!-- ngRepeat: i in sku['shop_info'].images -->
 									<li ng-repeat="i in sku[&#39;shop_info&#39;].images" class="on"><img
 										ng-src="http://img01.smartisanos.cn/67/100014801/29C1ECDFE71657216687986EDB2F0BC3/1450756133/527X527.jpg"
-										src="./img/library/光明牛奶.jpg"></li>
+										src="./img/library/milk.jpg"></li>
 									<!-- end ngRepeat: i in sku['shop_info'].images -->
 									<li ng-repeat="i in sku[&#39;shop_info&#39;].images" class=""><img
 										ng-src="http://img01.smartisanos.cn/67/100014801/4BE39EFAD5F117F2C874E920416DC03D/1450756133/527X527.jpg"
-										src="./img/library/光明牛奶.jpg"></li>
+										src="./img/library/milk.jpg"></li>
 									<!-- end ngRepeat: i in sku['shop_info'].images -->
 								</ul>
 								<ul class="thumbnail">
@@ -276,12 +276,12 @@ ng\:form {
 									<li ng-repeat="i in sku[&#39;shop_info&#39;].images" class="on"><a
 										ng-click="activeThumbnail($index)"><img
 											ng-src="http://img01.smartisanos.cn/67/100014801/29C1ECDFE71657216687986EDB2F0BC3/1450756133/60X60.jpg"
-											src="./img/library/光明牛奶.jpg"></a></li>
+											src="./img/library/milk.jpg"></a></li>
 									<!-- end ngRepeat: i in sku['shop_info'].images -->
 									<li ng-repeat="i in sku[&#39;shop_info&#39;].images" class=""><a
 										ng-click="activeThumbnail($index)"><img
 											ng-src="http://img01.smartisanos.cn/67/100014801/4BE39EFAD5F117F2C874E920416DC03D/1450756133/60X60.jpg"
-											src="./img/library/光明牛奶.jpg"></a></li>
+											src="./img/library/milk.jpg"></a></li>
 									<!-- end ngRepeat: i in sku['shop_info'].images -->
 								</ul>
 								<a class="thumb-pre" ng-click="preNextThumbnail(&#39;pre&#39;)"><span></span></a>
