--- a/src/main/webapp/payment.html
+++ b/src/main/webapp/payment.html
@@ -214,7 +214,7 @@
 						<div class="box-inner payment-checkout-panel fn-clear">
 							<span class="blue-main-btn big-main-btn js-payment-order fn-hide">
 								<a>现在支付</a>
-							</span> <span class="prices"> 应付金额： <em>¥ 153.00</em>
+							</span> <span class="prices"> 应付金额： <em>¥ 84.00</em>
 							</span>
 						</div>
 					</div>
@@ -233,14 +233,14 @@
 								<div class="cart-items fn-clear" data-id="100014801">
 									<div class="prod-info">
 										<div class="items-thumb">
-											<a href="#"
+											<a href="./milk.html"
 												target="_blank" title="圣诞节休战"> <img
-												src="./img/library/光明牛奶.jpg">
+												src="./img/library/milk.jpg">
 											</a>
 										</div>
 										<div class="items-params fn-clear">
 											<h6 class="name">
-												<a href="#" title="圣诞节休战">奇雅光明牛奶</a>
+												<a href="./milk.html" title="圣诞节休战">奇雅光明牛奶</a>
 											</h6>
 											<div class="subtotal">¥ 69.00</div>
 											<div class="num">1</div>
