--- a/src/main/webapp/shoppingcart.html
+++ b/src/main/webapp/shoppingcart.html
@@ -66,7 +66,7 @@ ng\:form {
 			<div class="header-main">
 				<div class="container">
 					<h1 class="logo">
-						<a href="#">Smartisan</a>
+						<a href="#">Chia</a>
 					</h1>
 					<div class="nav">
 						<div class="view">
@@ -176,7 +176,7 @@ ng\:form {
 														title="奇雅月饼" target="_blank"
 														class="ng-scope"> <img
 														ng-src="http://img01.smartisanos.cn/16/1000136/100013618/76B99D22ECB4EA7CD95D90B4617C8B92/80X80.jpg"
-														src="./img/library/奇雅月饼.jpg">
+														src="./img/library/mooncake.jpg">
 													</a>
 													<!-- end ngIf: cart.link -->
 													<!-- ngIf: !cart.link -->
@@ -258,10 +258,10 @@ ng\:form {
 												<div class="items-thumb">
 													<!-- ngIf: cart.link -->
 													<a ng-if="cart.link"
-														href="#"
+														href="./milk.html"
 														title="奇雅光明牛奶" target="_blank" class="ng-scope"> <img
 														ng-src="http://img01.smartisanos.cn/67/100014801/29C1ECDFE71657216687986EDB2F0BC3/1450756133/80X80.jpg"
-														src="./img/library/光明牛奶.jpg">
+														src="./img/library/milk.jpg">
 													</a>
 													<!-- end ngIf: cart.link -->
 													<!-- ngIf: !cart.link -->
@@ -269,7 +269,7 @@ ng\:form {
 												<div class="name hide-row">
 													<!-- ngIf: cart.link -->
 													<a ng-if="cart.link"
-														href="#"
+														href="./milk.html"
 														title="奇雅光明牛奶" target="_blank" class="ng-binding ng-scope">奇雅光明牛奶</a>
 													<!-- end ngIf: cart.link -->
 													<!-- ngIf: !cart.link -->
