--- a/src/main/webapp/list.html
+++ b/src/main/webapp/list.html
@@ -64,7 +64,7 @@ ng\:form {
 			<div class="header-main">
 				<div class="container">
 					<h1 class="logo">
-						<a href="http://www.smartisan.com/#/home">Smartisan</a>
+						<a href="#">Chia</a>
 					</h1>
 					<div class="nav">
 						<div class="view">
@@ -157,7 +157,7 @@ ng\:form {
 											data-id="100013618" data-mobile=""><div class="thumb">
 												<img
 													ng-src="http://img01.smartisanos.cn/16/1000136/100013618/76B99D22ECB4EA7CD95D90B4617C8B92/80X80.jpg"
-													src="./img/library/奇雅月饼.jpg">
+													src="./img/library/mooncake.jpg">
 											</div>
 											<div class="desc">
 												<p class="cart-name hide-row">
@@ -186,12 +186,12 @@ ng\:form {
 											data-id="100014801" data-mobile=""><div class="thumb">
 												<img
 													ng-src="http://img01.smartisanos.cn/67/100014801/29C1ECDFE71657216687986EDB2F0BC3/1450756133/80X80.jpg"
-													src="./img/library/光明牛奶.jpg">
+													src="./img/library/milk.jpg">
 											</div>
 											<div class="desc">
 												<p class="cart-name hide-row">
 													<!-- ngIf: cart.link -->
-													<a href="#"
+													<a href="./milk.html"
 														ng-if="cart.link" class="ng-binding ng-scope">奇雅光明牛奶</a>
 													<!-- end ngIf: cart.link -->
 													<!-- ngIf: !cart.link -->
@@ -233,7 +233,7 @@ ng\:form {
 						</div>
 						<div class="right-nav"
 							ng-class="{&#39;right-nav-hide&#39;: !!mainConfig.useGoodsDiscount520Data}">
-							<a href="http://www.smartisan.com/#/cdkey" target="_blank">优先购买码</a>
+							<a href="#" target="_blank">优先购买码</a>
 						</div>
 					</div>
 				</div>
@@ -249,14 +249,14 @@ ng\:form {
 							<div class="gray-box clearfix cover-item-100016001"
 								ng-class="{&#39;cover-item-hide&#39;: item.isHide}">
 								<div class="cover">
-									<a href="http://www.smartisan.com/cn/#/item/100016001"><img
+									<a href="#"><img
 										real-src="http://img01.smartisanos.cn/02/100016001/4CB43E8DC2610CFC3CF747A88A4B6612/1453284000/300X300.jpg"
-										src="./img/library/奇雅月饼.jpg"></a>
+										src="./img/library/mooncake.jpg"></a>
 								</div>
 								<div class="story-content">
 									<div class="share">
 										<h2 class="hide-row">
-											<a href="http://www.smartisan.com/cn/#/item/100016001"
+											<a href="#"
 												class="ng-binding">奇雅月饼</a>
 										</h2>
 										<!-- ngIf: item.subtitle -->
@@ -291,14 +291,14 @@ ng\:form {
 							<div class="gray-box clearfix cover-item-100014801"
 								ng-class="{&#39;cover-item-hide&#39;: item.isHide}">
 								<div class="cover">
-									<a href="http://www.smartisan.com/cn/#/item/100014801"><img
+									<a href="./milk.html"><img
 										real-src="http://img01.smartisanos.cn/67/100014801/29C1ECDFE71657216687986EDB2F0BC3/1450756133/300X300.jpg"
-										src="./img/library/光明牛奶.jpg"></a>
+										src="./img/library/milk.jpg"></a>
 								</div>
 								<div class="story-content">
 									<div class="share">
 										<h2 class="hide-row">
-											<a href="http://www.smartisan.com/cn/#/item/100014801"
+											<a href="./milk.html"
 												class="ng-binding">奇雅光明牛奶</a>
 										</h2>
 										<!-- ngIf: item.subtitle -->
